Update publish job to run on push and release events
Previously, the publish job in ci-cd.yml only ran for release events. This change updates the condition so that the job will now run for both push and release events, allowing NuGet packages to be published in more scenarios.

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -38,8 +38,9 @@ jobs:
 
   publish:
     name: Publish NuGet Packages
+    needs: build-and-test
     runs-on: ubuntu-latest
-    if: github.event_name == 'release'
+    if: github.event_name == 'push' || github.event_name == 'release'
     permissions:
       contents: read
     env:
