Include README.md in NuGet package for Core projects
Added <PackageReadmeFile> property and packaging instructions to Qvec.Core and Qvec.Core.Client csproj files to ensure README.md is included and referenced as the package readme in NuGet distributions.

--- a/Qvec.Core/Qvec.Core.csproj
+++ b/Qvec.Core/Qvec.Core.csproj
@@ -7,6 +7,11 @@
 	<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 	<PublishAot>true</PublishAot>
 	<OptimizationPreference>Speed</OptimizationPreference>
+	<PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\README.md" Pack="true" PackagePath="\" />
+  </ItemGroup>
 
 </Project>
