Add inverted index & source gen for O(1 metadata filtering
Introduces [QvecIndexed] attribute and IQvecFieldExtractor<T> interface for fast metadata filtering. Adds Roslyn source generator (Qvec.SourceGen) to auto-generate field extractors. QvecClient and QvecDatabase now support O(1 indexed filtering and hybrid vector search via an in-memory inverted index, with automatic index maintenance on insert/delete. Search and Where now accept expression filters and use the index when possible. Expanded README with usage examples.

--- a/Qvec.Core.Client/Qvec.Core.Client.csproj
+++ b/Qvec.Core.Client/Qvec.Core.Client.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Qvec.Core\Qvec.Core.csproj" />
+    <ProjectReference Include="..\Qvec.SourceGen\Qvec.SourceGen.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
   </ItemGroup>
 
   <ItemGroup>
